--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,10 @@
 name: Deploy to GitHub Pages
 
+permissions: # 新增权限配置
+  contents: write
+  pages: write
+  id-token: write
+
 on:
   push:
     branches: [ "main" ]
@@ -8,6 +13,9 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: 
+        name: github-pages
+        url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
       - name: Checkout
@@ -28,6 +36,8 @@ jobs:
       - name: Deploy to GH Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          publish_dir: ./dist
-          keep_files: true  
-          force_orphan: true  
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            publish_dir: ./dist
+            enable_jekyll: false  # 禁用 Jekyll 处理
+            full_commit_message: "Deploy: ${{ github.sha }}"  # 完整提交信息
+            force_orphan: true  
